# coreason-codex

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  NOTICE  PRD.md  README.md  VIGNETTE.md  mkdocs.yml  pyproject.toml
docs/: architecture.md  index.md  setup_deployment.md  usage.md  vignette.md
src/coreason_codex/: __init__.py  build.py  crosswalker.py  embedders.py  hierarchy.py  interfaces.py  loader.py  main.py  models.py  normalizer.py  pipeline.py  schemas.py  server.py
src/coreason_codex/utils/: __init__.py  logger.py
tests/: conftest.py  test_build.py  test_build_complex.py  test_build_coverage.py  test_build_errors.py  test_build_vectors.py  test_build_vectors_complex.py  test_complex_scenarios.py  test_component_errors.py  test_coverage_gaps.py  test_crosswalker.py  test_crosswalker_complex.py  test_embedders.py  test_fixtures.py  test_hierarchy.py  test_hierarchy_complex.py  test_loader.py  test_loader_errors.py  test_logger_init.py  test_main.py  test_main_coverage.py  test_main_edge_cases.py  test_models.py  test_normalizer.py  test_normalizer_edge_cases.py  test_pipeline.py  test_pipeline_complex.py  test_pipeline_coverage.py  test_public_api.py  test_security.py  test_server.py  test_server_edge_cases.py  test_utils.py
