[tool.poetry]
name = "coreason_codex"
version = "0.4.0"
description = "coreason-codex"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "coreason_codex", from = "src"}]

[tool.poetry.scripts]
codex = "coreason_codex.main:main"

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
loguru = "^0.7.2"
pydantic = "^2.12.5"
lancedb = "^0.26.1"
numpy = "^2.4.1"
duckdb = "^1.4.3"
sentence-transformers = "^5.2.0"
typer = "^0.21.1"
jaraco-context = "^6.1.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
coreason-identity = "^0.1.0"
anyio = "^4.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason_codex"
version = "0.4.0"
description = "coreason-codex"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason-codex"
Repository = "https://github.com/CoReason-AI/coreason-codex"
Documentation = "https://github.com/CoReason-AI/coreason-codex"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["coreason_codex"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
